test/cli/test-validating-policy/json-mode-on-resource/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: json-mode-on-resource
spec:
  evaluation:
    mode: JSON
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: "object.metadata.name == 'should-not-match'"
    message: "name must be should-not-match"
